--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,11 @@
           </execution>
         </executions>
       </plugin>
-
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+      </plugin>
       <plugin>
         <!-- Code coverage plugin. -->
         <!-- This sets up code coverage for the unit tests, the integration tests, -->
@@ -171,7 +175,7 @@
           </execution>
         </executions>
       </plugin>
-
+         
     </plugins>
   </build>
 </project>
