--- a/pom.xml
+++ b/pom.xml
@@ -97,11 +97,16 @@
           </execution>
         </executions>
       </plugin>
+             
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.19.1</version>
+        <configuration>
+         <testFailureIgnore>true</testFailureIgnore>
+        </configuration>
       </plugin>
+             
       <plugin>
         <!-- Code coverage plugin. -->
         <!-- This sets up code coverage for the unit tests, the integration tests, -->
